--- a/web/www/public/bundle.css
+++ b/web/www/public/bundle.css
@@ -1,3 +1,94 @@
+@charset "UTF-8";
+@font-face {
+  font-family: "icomoon";
+  src: url("/public/icomoon.e7f6fa2e.eot?3aooof");
+  src: url("/public/icomoon.e7f6fa2e.eot?3aooof#iefix") format("embedded-opentype"), url("/public/icomoon.e08af3e5.ttf?3aooof") format("truetype"), url("/public/icomoon.e0d852cf.woff?3aooof") format("woff"), url("/public/icomoon.ee2cd42b.svg?3aooof#icomoon") format("svg");
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+[class^=icon-], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: "icomoon" !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-line:before {
+  content: "";
+}
+
+.icon-new:before {
+  content: "";
+}
+
+.icon-move:before {
+  content: "";
+}
+
+.icon-rotate:before {
+  content: "";
+}
+
+.icon-load:before {
+  content: "";
+}
+
+.icon-scale:before {
+  content: "";
+}
+
+.icon-ellipse:before {
+  content: "";
+}
+
+.icon-rectangle:before {
+  content: "";
+}
+
+.icon-duplicate:before {
+  content: "";
+}
+
+.icon-save:before {
+  content: "";
+}
+
+.icon-about:before {
+  content: "";
+}
+
+.icon-to-front:before {
+  content: "";
+}
+
+.icon-to-back:before {
+  content: "";
+}
+
+.icon-png:before {
+  content: "";
+}
+
+.icon-circle:before {
+  content: "";
+}
+
+.icon-delete:before {
+  content: "";
+}
+
+.icon-select:before {
+  content: "";
+}
+
 html {
   box-sizing: border-box;
 }
@@ -172,6 +263,75 @@ h4.underlined {
 
 .text-sm {
   font-size: 0.85rem;
+}
+
+.header {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  height: 3rem;
+  background-color: #000;
+  color: #FFF;
+}
+.header__title {
+  margin: 0;
+  text-align: center;
+  height: 3rem;
+}
+.header__left {
+  height: 3rem;
+}
+.header__right {
+  height: 3rem;
+  text-align: right;
+}
+.header__button {
+  outline: none;
+  border: none;
+  height: 3rem;
+  background-color: transparent;
+  color: #FFF;
+  font-weight: bold;
+  padding: 0 0.75rem;
+  cursor: pointer;
+  transition: 0.5s background-color ease-in-out;
+}
+.header__button:hover {
+  background-color: #586375;
+}
+
+.list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.main {
+  display: grid;
+  grid-template-columns: 2fr 10fr;
+  position: absolute;
+  top: 3rem;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+.main__toolbox {
+  text-align: center;
+}
+.main__toolbox button {
+  outline: none;
+  border: none;
+  width: 100%;
+  text-align: center;
+  background-color: transparent;
+  color: #000;
+  background-color: #e3e5ea;
+  font-weight: bold;
+  padding: 0.75rem;
+  cursor: pointer;
+  transition: 0.5s background-color ease-in-out;
+}
+.main__toolbox button:hover {
+  background-color: #a8b1be;
 }
 
 /*# sourceMappingURL=/public/bundle.css.map */
